# graphql-analyzer

./: .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .graphqlrc.yaml  .mcp.json  .npmrc  .oxfmtrc.json  .pre-commit-hooks.yaml  .prettierignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  DEBUGGING.md  DEBUGGING_LSP_PERFORMANCE.md  DEVELOPMENT.md  ENGINEERING_REVIEW.md  EXPERT_CODE_REVIEW_ISSUES.md  HOMEBREW_PLAN.md  ISSUE_CREATION_README.md  README.md  RELEASES.md  SALSA_COMPLETION_PLAN.md  TEST_COVERAGE_CHECKLIST.md  VSCODE_EXTENSION.md  WIP_CONFIG_INTEGRATION.md  codecov.yml  create_salsa_issue.sh  deny.toml  dist-workspace.toml  knope.toml  mcp-config.example.json  mise.toml  package-lock.json  package.json  plan-dist-manifest.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  (+4 more)
benches/: Cargo.toml  README.md
benches/benches/: incremental_computation.rs
crates/analysis/: CLAUDE.md  Cargo.toml  README.md
crates/analysis/src/: diagnostics.rs  document_validation.rs  lib.rs  lint_integration.rs  merged_schema.rs  project_lints.rs  validation.rs
crates/analysis/tests/: analysis_tests.rs
crates/apollo-ext/: Cargo.toml
crates/apollo-ext/src/: collectors.rs  definitions.rs  lib.rs
crates/base-db/: Cargo.toml  README.md
crates/base-db/src/: lib.rs
crates/cli/: CHANGELOG.md  Cargo.toml  README.md
crates/cli/src/: analysis.rs  exit_code.rs  main.rs  progress.rs  rendering.rs  watch.rs
crates/cli/src/commands/: check.rs  common.rs  complexity.rs  coverage.rs  deprecations.rs  explain.rs  fix.rs  fragments.rs  lint.rs  list_rules.rs  lsp.rs  mcp.rs  mod.rs  sarif.rs  schema.rs  stats.rs  validate.rs
crates/cli/tests/: validate_exit_code.rs
crates/config/: CLAUDE.md  Cargo.toml  README.md
crates/config/schema/: example-multi-project.graphqlrc.yaml  example.graphqlrc.yaml  graphqlrc.schema.json  graphqlrc.schema.md
crates/config/src/: config.rs  env.rs  error.rs  lib.rs  loader.rs  suggestions.rs  validation.rs
crates/extract/: Cargo.toml  README.md
crates/extract/src/: error.rs  extractor.rs  lib.rs  source_location.rs
crates/graphql-analysis/: Cargo.toml  README.md
crates/graphql-analysis/src/: diagnostics.rs  document_validation.rs  lib.rs  lint_integration.rs  merged_schema.rs  project_lints.rs  schema_validation.rs  validation.rs  validation_cache.rs
crates/graphql-analysis/tests/: analysis_tests.rs
crates/graphql-cli/: Cargo.toml  README.md
crates/graphql-cli/src/: analysis.rs  main.rs  progress.rs  schema_cache.rs  watch.rs
crates/graphql-cli/src/commands/: check.rs  codegen.rs  common.rs  complexity.rs  coverage.rs  deprecations.rs  fix.rs  fragments.rs  lint.rs  lint_old.rs  lsp.rs  mcp.rs  mod.rs  schema.rs  stats.rs  validate.rs
crates/graphql-config/: Cargo.toml  README.md
crates/graphql-config/schema/: example-multi-project.graphqlrc.yaml  example.graphqlrc.yaml  graphqlrc.schema.json  graphqlrc.schema.md
crates/graphql-config/src/: config.rs  lib.rs  loader.rs
crates/graphql-db/: Cargo.toml  README.md
crates/graphql-db/src/: lib.rs
crates/graphql-extract/: Cargo.toml  README.md
crates/graphql-extract/src/: extractor.rs
crates/graphql-hir/: Cargo.toml  README.md
crates/graphql-hir/src/: body.rs  lib.rs  structure.rs
crates/graphql-hir/tests/: hir_tests.rs
crates/graphql-ide/: Cargo.toml  README.md
crates/graphql-ide-db/: Cargo.toml
crates/graphql-ide-db/src/: lib.rs
crates/graphql-ide/src/: analysis_host_isolation.rs  code_lenses.rs  completion.rs  diagnostics.rs  document_symbols.rs  file_registry.rs  find_references.rs  folding_ranges.rs  goto_definition.rs  helpers.rs  hover.rs  inlay_hints.rs  lib.rs  symbol.rs  symbols.rs  types.rs
crates/graphql-introspect/: Cargo.toml  README.md
crates/graphql-introspect/src/: client.rs  error.rs  lib.rs  query.rs  sdl.rs  types.rs
crates/graphql-linter/: Cargo.toml  README.md
crates/graphql-linter/src/: config.rs  context.rs  diagnostics.rs  lib.rs  linter.rs  registry.rs  schema_utils.rs  traits.rs
crates/graphql-linter/src/rules/: avoid_operation_name_prefix.rs  deprecated.rs  deprecated_field.rs  mod.rs  (+13 more)
crates/graphql-linter/tests/: lint_integration.rs
crates/graphql-lsp/: Cargo.toml  README.md  build.rs
crates/graphql-lsp/src/: conversions.rs  lib.rs  main.rs  server.rs  workspace.rs
crates/graphql-lsp/tests/: goto_definition_test.rs
crates/graphql-mcp/: Cargo.toml  README.md
crates/graphql-mcp/src/: lib.rs  service.rs  tools.rs  types.rs
crates/graphql-node/: Cargo.toml  README.md  package.json
crates/graphql-node/src/: lib.rs
crates/graphql-syntax/: Cargo.toml  README.md
crates/graphql-syntax/src/: lib.rs
crates/graphql-test-utils/: Cargo.toml
crates/graphql-test-utils/src/: cursor.rs  database.rs  fixtures.rs  lib.rs  project.rs  tracking.rs
crates/graphql-utils/: Cargo.toml  README.md
crates/graphql-utils/src/: collectors.rs  definitions.rs  lib.rs  names.rs  visitor.rs
crates/graphql-wasm/: Cargo.toml  README.md
crates/graphql-wasm/src/: lib.rs
crates/hir/: Cargo.toml  README.md
crates/hir/src/: lib.rs  structure.rs
crates/hir/tests/: body_tests.rs  hir_tests.rs
crates/ide/: Cargo.toml  README.md
crates/ide-db/: Cargo.toml  README.md
crates/ide-db/src/: lib.rs
crates/ide/src/: analysis.rs  analysis_host_isolation.rs  apollo_client_builtins.graphql  code_lenses.rs  completion.rs  database.rs  db_files.rs  diagnostics_for_change_tests.rs  discovery.rs  file_registry.rs  folding_ranges.rs  goto_definition.rs  helpers.rs  host.rs  hover.rs  inlay_hints.rs  lib.rs  references.rs  relay_client_builtins.graphql  rename.rs  schema_builtins.graphql  selection_range.rs  semantic_tokens.rs  signature_help.rs  symbol.rs  symbols.rs  types.rs
crates/introspect/: Cargo.toml
crates/introspect/src/: client.rs  error.rs  lib.rs  query.rs  sdl.rs  types.rs
crates/linter/: CLAUDE.md  Cargo.toml  README.md
crates/linter/src/: config.rs  diagnostics.rs  eslint_disable.rs  ignore.rs  lib.rs  registry.rs  schema_utils.rs  traits.rs
crates/linter/tests/: lint_integration.rs
(+825 files in other folders)
