[workspace]
resolver = "2"
members = [
  "crates/config",
  "crates/extract",
  "crates/introspect",
  "crates/lsp",
  "crates/cli",
  "crates/linter",
  "crates/base-db",
  "crates/syntax",
  "crates/hir",
  "crates/analysis",
  "crates/ide",
  "crates/ide-db",
  "crates/test-utils",
  "crates/mcp",
  "crates/apollo-ext",
  "benches",
  ".husky",
  "xtask",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/trevor-scheer/graphql-analyzer"
authors = ["Trevor Scheer <trevor.scheer@gmail.com>"]

[workspace.dependencies]
# Common dependencies
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
thiserror = "2.0"
anyhow = "1.0"

# GraphQL
apollo-parser = "0.8"
# FORK DEPENDENCY: Uses trevor-scheer/apollo-rs fork with `parse_with_offset` branch
# Required for: ExecutableDocument::builder() API for incremental document construction
# Tracking issue: https://github.com/trevor-scheer/graphql-analyzer/issues/274
# TODO: Upstream these changes to apollographql/apollo-rs and switch to official release
apollo-compiler = { git = "https://github.com/trevor-scheer/apollo-rs.git", branch = "parse_with_offset" }

# Async
tokio = { version = "1.48", features = ["full"] }

# LSP
tower-lsp-server = "0.22"
lsp-types = "0.97"

# CLI
clap = { version = "4.5", features = ["derive"] }

# File system
glob = "0.3"
walkdir = "2.5"
notify = "8.2"
ignore = "0.4"

# HTTP
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }

swc_core = { version = "49.0", features = ["ecma_parser", "ecma_ast", "ecma_visit"] }
swc_common = "18.0"

# Utilities
dashmap = "6.1"
once_cell = "1.21"
parking_lot = "0.12"

# Logging and Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Incremental computation
salsa = "0.25"

# Benchmarking
criterion = { version = "0.5", features = ["html_reports"] }

# Testing
insta = { version = "1.40", features = ["yaml"] }

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
strip = true
opt-level = "z"
codegen-units = 1
