[package]
name = "graphql-lsp-benches"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[[bench]]
name = "incremental_computation"
harness = false

[dependencies]
graphql-base-db = { path = "../crates/base-db" }
graphql-ide-db = { path = "../crates/ide-db" }
graphql-syntax = { path = "../crates/syntax" }
graphql-hir = { path = "../crates/hir" }
graphql-analysis = { path = "../crates/analysis" }
graphql-ide = { path = "../crates/ide" }
criterion = { workspace = true }
salsa = { workspace = true }
