[package]
name = "graphql-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "GraphQL validation and analysis layer"
keywords = ["graphql", "validation", "analysis"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
graphql-base-db = { path = "../base-db" }
graphql-syntax = { path = "../syntax" }
graphql-hir = { path = "../hir" }
graphql-linter = { path = "../linter" }
salsa = { workspace = true }
apollo-compiler = { workspace = true }
apollo-parser = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
text-size = "1.1"

[dev-dependencies]
graphql-test-utils = { path = "../test-utils" }
