[package]
name = "graphql-apollo-ext"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
readme = "README.md"
description = "Apollo-parser extensions: visitor pattern, name extraction, and collection utilities"
keywords = ["graphql", "apollo-parser", "visitor", "cst"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
apollo-parser.workspace = true
