[package]
name = "graphql-base-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Salsa database foundation for GraphQL LSP"
keywords = ["graphql", "salsa", "incremental"]
categories = ["development-tools"]

[dependencies]
graphql-types = { path = "../types" }
salsa = { workspace = true }
