[package]
name = "graphql-cli"
version = "0.2.6"
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI tool for GraphQL validation and linting"
keywords = ["graphql", "cli", "validation", "linting"]
categories = ["command-line-utilities", "development-tools"]
default-run = "graphql"

[package.metadata.dist]
dist = true

[[bin]]
name = "graphql"
path = "src/main.rs"

[dependencies]
# Internal dependencies
graphql-config = { path = "../config" }
graphql-extract = { path = "../extract" }
graphql-ide = { path = "../ide" }
graphql-introspect = { path = "../introspect" }
graphql-linter = { path = "../linter" }
graphql-lsp = { path = "../lsp" }
graphql-mcp = { path = "../mcp" }
graphql-syntax = { path = "../syntax" }

# GraphQL
apollo-parser = { workspace = true }

# CLI
clap = { workspace = true }
clap_complete = { workspace = true }

# Async
tokio = { workspace = true }

# Utilities
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
glob = { workspace = true }

# File watching
notify = { workspace = true }

# Terminal UI
colored = "3.0"
indicatif = "0.18"
ariadne = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenTelemetry
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
opentelemetry-otlp = { workspace = true, features = ["default"] }
opentelemetry-semantic-conventions = { workspace = true }
tracing-opentelemetry = { workspace = true }

[dev-dependencies]
tempfile = "3.25.0"

[lints]
workspace = true
