[package]
name = "graphql-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Extract GraphQL from TypeScript/JavaScript template literals"
keywords = ["graphql", "typescript", "javascript", "extraction"]
categories = ["parser-implementations", "development-tools"]

[package.metadata.dist]
dist = false

[dependencies]
graphql-types = { path = "../types" }
thiserror = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }
swc_common = { workspace = true }
swc_core = { workspace = true }
serde = { workspace = true }
tracing = "0.1"

[dev-dependencies]
