[package]
name = "graphql-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
graphql-db = { path = "../graphql-db" }
graphql-syntax = { path = "../graphql-syntax" }
graphql-hir = { path = "../graphql-hir" }
graphql-linter = { path = "../graphql-linter" }
graphql-project = { path = "../graphql-project" }
salsa = { workspace = true }
apollo-compiler = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
