[package]
name = "graphql-analysis"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "GraphQL validation and analysis layer"
keywords = ["graphql", "validation", "analysis"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
graphql-db = { path = "../graphql-db" }
graphql-syntax = { path = "../graphql-syntax" }
graphql-hir = { path = "../graphql-hir" }
graphql-linter = { path = "../graphql-linter" }
salsa = { workspace = true }
apollo-compiler = { workspace = true }
apollo-parser = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
graphql-db = { path = "../graphql-db", features = ["test-utils"] }
