[package]
name = "graphql-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.dist]
dist = true

[[bin]]
name = "graphql"
path = "src/main.rs"

[dependencies]
# Internal dependencies
graphql-project = { path = "../graphql-project" }
graphql-config = { path = "../graphql-config" }
graphql-extract = { path = "../graphql-extract" }
graphql-linter = { path = "../graphql-linter" }

# CLI
clap = { workspace = true }

# Async
tokio = { workspace = true }

# Utilities
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Terminal UI
colored = "2.0"
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
