[package]
name = "graphql-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.dist]
dist = true

[[bin]]
name = "graphql"
path = "src/main.rs"

[dependencies]
# Internal dependencies
graphql-project = { path = "../graphql-project" }
graphql-config = { path = "../graphql-config" }
graphql-extract = { path = "../graphql-extract" }
graphql-ide = { path = "../graphql-ide" }
graphql-linter = { path = "../graphql-linter" }

# CLI
clap = { workspace = true }

# Async
tokio = { workspace = true }

# Utilities
anyhow = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# Terminal UI
colored = "2.0"
indicatif = "0.17"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# OpenTelemetry (optional, enabled with `otel` feature)
opentelemetry = { version = "0.27", optional = true }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.27", features = ["default"], optional = true }
opentelemetry-semantic-conventions = { version = "0.27", optional = true }
tracing-opentelemetry = { version = "0.28", optional = true }

[features]
otel = ["opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp", "opentelemetry-semantic-conventions", "tracing-opentelemetry"]
