[package]
name = "graphql-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Salsa database foundation for GraphQL LSP"
keywords = ["graphql", "salsa", "incremental"]
categories = ["development-tools"]

[features]
test-utils = []

[dependencies]
salsa = { workspace = true }
