[package]
name = "graphql-extract"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
thiserror = { workspace = true }
glob = { workspace = true }
walkdir = { workspace = true }

# For TypeScript/JavaScript parsing
swc_common = { workspace = true, optional = true }
swc_ecma_parser = { workspace = true, optional = true }
swc_ecma_ast = { workspace = true, optional = true }
swc_ecma_visit = { workspace = true, optional = true }

[dev-dependencies]
anyhow = { workspace = true }
tempfile = "3.0"

[features]
default = []
# TypeScript/JavaScript extraction using SWC
typescript = ["dep:swc_common", "dep:swc_ecma_parser", "dep:swc_ecma_ast", "dep:swc_ecma_visit"]
