[package]
name = "graphql-hir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "High-level intermediate representation for GraphQL"
keywords = ["graphql", "hir", "semantic"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
graphql-db = { path = "../graphql-db" }
graphql-syntax = { path = "../graphql-syntax" }
salsa = { workspace = true }
apollo-parser = { workspace = true }
apollo-compiler = { workspace = true }
text-size = "1.1"

[dev-dependencies]
graphql-db = { path = "../graphql-db", features = ["test-utils"] }
