[package]
name = "graphql-ide"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "IDE features for GraphQL Language Server"
keywords = ["graphql", "ide", "language-server"]
categories = ["development-tools"]

[dependencies]
# Salsa for database access
salsa = { workspace = true }

# Apollo parser for CST traversal
apollo-parser = { workspace = true }

# Logging
tracing = { workspace = true }

# Configuration
graphql-config = { path = "../graphql-config" }

# File globbing
glob = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Concurrency - parking_lot::RwLock never poisons, preventing cascading panics
parking_lot = { workspace = true }

# Internal crates (query-based layers)
graphql-base-db = { path = "../graphql-base-db" }
graphql-syntax = { path = "../graphql-syntax" }
graphql-hir = { path = "../graphql-hir" }
graphql-analysis = { path = "../graphql-analysis" }
graphql-linter = { path = "../graphql-linter" }
graphql-extract = { path = "../graphql-extract" }

[dev-dependencies]
tempfile = "3.0"
graphql-ide-db = { path = "../graphql-ide-db" }
