[package]
name = "graphql-introspect"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "GraphQL introspection query executor and SDL converter"
keywords = ["graphql", "introspection", "schema"]
categories = ["development-tools", "web-programming"]

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
thiserror = { workspace = true }
tracing = "0.1"

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }
