[package]
name = "graphql-linter"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
# Internal dependencies - NEW ARCHITECTURE
graphql-db = { path = "../graphql-db" }
graphql-syntax = { path = "../graphql-syntax" }
graphql-hir = { path = "../graphql-hir" }

# OLD architecture - keep temporarily for compatibility during migration
graphql-project = { path = "../graphql-project" }

# GraphQL parsing
apollo-parser = { workspace = true }
apollo-compiler = { workspace = true }

# Core utilities
serde = { workspace = true }
serde_json = { workspace = true }

# Logging
tracing = "0.1"

[dev-dependencies]
serde_yaml = { workspace = true }
