[package]
name = "graphql-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[package.metadata.dist]
dist = true

[[bin]]
name = "graphql-lsp"
path = "src/main.rs"

[dependencies]
# Internal dependencies
graphql-project = { path = "../graphql-project" }
graphql-linter = { path = "../graphql-linter" }
graphql-config = { path = "../graphql-config" }
graphql-extract = { path = "../graphql-extract" }

# GraphQL
apollo-compiler = { workspace = true }

# LSP
tower-lsp-server = { workspace = true }
lsp-types = { workspace = true }

# Async
tokio = { workspace = true }

# Concurrency
dashmap = { workspace = true }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-opentelemetry = { version = "0.32", optional = true }
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"], optional = true }

# Temp files for TypeScript extraction
tempfile = "3.0"

[build-dependencies]
vergen-git2 = { version = "1.0", features = ["build", "cargo"] }

[features]
default = []
otel = ["tracing-opentelemetry", "opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp"]
