[package]
name = "graphql-lsp"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "GraphQL Language Server Protocol implementation"
keywords = ["graphql", "lsp", "language-server"]
categories = ["development-tools", "parser-implementations"]

[package.metadata.dist]
dist = true

[[bin]]
name = "graphql-lsp"
path = "src/main.rs"

[dependencies]
# Internal dependencies
graphql-linter = { path = "../graphql-linter" }
graphql-config = { path = "../graphql-config" }
graphql-extract = { path = "../graphql-extract" }
graphql-ide = { path = "../graphql-ide" }
graphql-syntax = { path = "../graphql-syntax" }

# GraphQL
apollo-compiler = { workspace = true }
apollo-parser = { workspace = true }

# LSP
tower-lsp-server = { workspace = true }
lsp-types = { workspace = true }

# Async
tokio = { workspace = true }

# Concurrency
dashmap = { workspace = true }

# Utilities
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }

# Logging and Tracing
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-opentelemetry = { version = "0.32", optional = true }
opentelemetry = { version = "0.31", optional = true }
opentelemetry_sdk = { version = "0.31", features = ["rt-tokio"], optional = true }
opentelemetry-otlp = { version = "0.31", features = ["grpc-tonic"], optional = true }

# Temp files for TypeScript extraction
tempfile = "3.0"
glob.workspace = true

[build-dependencies]
vergen-git2 = { version = "1.0", features = ["build", "cargo"] }

[features]
default = []
otel = ["tracing-opentelemetry", "opentelemetry", "opentelemetry_sdk", "opentelemetry-otlp"]
