[package]
name = "graphql-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
graphql-db = { path = "../graphql-db" }
graphql-extract = { path = "../graphql-extract" }
salsa = { workspace = true }
apollo-parser = { workspace = true }
apollo-compiler = { workspace = true }
