[package]
name = "graphql-syntax"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "GraphQL parsing layer with TypeScript/JavaScript support"
keywords = ["graphql", "parser", "syntax"]
categories = ["parser-implementations", "development-tools"]

[dependencies]
graphql-base-db = { path = "../graphql-base-db" }
graphql-extract = { path = "../graphql-extract" }
salsa = { workspace = true }
apollo-parser = { workspace = true }
apollo-compiler = { workspace = true }
tracing = { workspace = true }
