[package]
name = "graphql-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
description = "Shared test utilities for GraphQL LSP crates"
keywords = ["graphql", "testing", "utilities"]
categories = ["development-tools::testing"]

[dependencies]
graphql-db = { path = "../graphql-db", features = ["test-utils"] }
graphql-syntax = { path = "../graphql-syntax" }
graphql-hir = { path = "../graphql-hir" }
graphql-analysis = { path = "../graphql-analysis" }
salsa = { workspace = true }
