[package]
name = "graphql-test-utils"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
description = "Shared test utilities for GraphQL LSP crates"
keywords = ["graphql", "testing", "utilities"]
categories = ["development-tools::testing"]

[features]
default = []
# Include GraphQLAnalysisDatabase impl on TestDatabase.
# Only enable this for crates that don't depend on graphql-analysis.
analysis = ["dep:graphql-analysis"]

[dependencies]
graphql-db = { path = "../graphql-db", features = ["test-utils"] }
graphql-syntax = { path = "../graphql-syntax" }
graphql-hir = { path = "../graphql-hir" }
graphql-analysis = { path = "../graphql-analysis", optional = true }
salsa = { workspace = true }
