[package]
name = "graphql-wasm"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
description = "WebAssembly bindings for GraphQL validation and linting"
keywords = ["graphql", "wasm", "validation", "linting", "webassembly"]
categories = ["wasm", "web-programming", "development-tools"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Internal dependencies
graphql-db = { path = "../graphql-db" }
graphql-syntax = { path = "../graphql-syntax" }
graphql-hir = { path = "../graphql-hir" }
graphql-analysis = { path = "../graphql-analysis" }
graphql-linter = { path = "../graphql-linter" }
graphql-ide = { path = "../graphql-ide" }

# WASM bindings
wasm-bindgen = "0.2"
js-sys = "0.3"
serde = { workspace = true }
serde_json = { workspace = true }
serde-wasm-bindgen = "0.6"

# Console logging for debugging
console_error_panic_hook = { version = "0.1", optional = true }

[dev-dependencies]
wasm-bindgen-test = "0.3"

[features]
default = ["console_error_panic_hook"]
