[package]
name = "graphql-hir"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "High-level intermediate representation for GraphQL"
keywords = ["graphql", "hir", "semantic"]
categories = ["development-tools", "parser-implementations"]

[dependencies]
graphql-base-db = { path = "../base-db" }
graphql-syntax = { path = "../syntax" }
salsa = { workspace = true }
apollo-parser = { workspace = true }
apollo-compiler = { workspace = true }
text-size = "1.1"

[dev-dependencies]
graphql-test-utils = { path = "../test-utils" }

[lints]
workspace = true
