[package]
name = "graphql-ide-db"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
readme = "README.md"
description = "Salsa database for GraphQL IDE features"
keywords = ["graphql", "salsa", "incremental", "ide"]
categories = ["development-tools"]

[dependencies]
# Core database dependencies - graphql-analysis brings in the full chain
graphql-base-db = { path = "../base-db" }
graphql-syntax = { path = "../syntax" }
graphql-hir = { path = "../hir" }
graphql-analysis = { path = "../analysis" }

# Salsa for incremental computation
salsa = { workspace = true }

[features]
default = ["extract"]
extract = ["graphql-syntax/extract", "graphql-hir/extract"]

[lints]
workspace = true
