[package]
name = "graphql-ide"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "IDE features for GraphQL Language Server"
keywords = ["graphql", "ide", "language-server"]
categories = ["development-tools"]

[dependencies]
# Salsa for database access
salsa = { workspace = true }

# Apollo parser for CST traversal
apollo-parser = { workspace = true }

# Logging
tracing = { workspace = true }

# Configuration
graphql-config = { path = "../config" }

# File globbing
glob = { workspace = true }

# Error handling
anyhow = { workspace = true }

# Internal crates (query-based layers)
graphql-base-db = { path = "../base-db" }
graphql-syntax = { path = "../syntax" }
graphql-hir = { path = "../hir" }
graphql-analysis = { path = "../analysis" }
graphql-linter = { path = "../linter" }
graphql-extract = { path = "../extract", optional = true }
graphql-introspect = { path = "../introspect", optional = true }

[features]
default = ["extract", "introspect"]
extract = ["dep:graphql-extract", "graphql-syntax/extract", "graphql-ide-db/extract"]
introspect = ["dep:graphql-introspect"]

[dev-dependencies]
tempfile = "3.0"
serde_json = { workspace = true }
graphql-ide-db = { path = "../ide-db" }

[lints]
workspace = true
